--- a/xtensa_test/Cargo.toml
+++ b/xtensa_test/Cargo.toml
@@ -9,3 +9,13 @@ name = "xtensa_test"
 edition = "2021"
 crate-type = ["staticlib"]
 required-features = []
+
+[dependencies]
+esp-idf-sys = { version = "0.34.1", features = ["pio"] }
+esp-idf-hal = "0.43.1"
+
+[build-dependencies]
+bindgen = "0.64"
+cc = "1.0"
+serde = "1.0"
+serde_json = "1.0"
