--- a/xtensa_test/platformio.ini
+++ b/xtensa_test/platformio.ini
@@ -1,13 +1,8 @@
-
-; PlatformIO Project Configuration File
-;
-; Please visit documentation for options and examples
-; https://docs.platformio.org/page/projectconf.html
 [platformio]
 default_envs = debug
 
 [env]
-extra_scripts = pre:platformio.git.py, pre:platformio.patch.py, platformio.cargo.py
+extra_scripts = pre:platformio.build.py, platformio.git.py, pre:platformio.patch.py, platformio.cargo.py
 board = m5stack-coreink
 platform = espressif32
 framework = espidf
@@ -16,6 +11,8 @@ rust_target = xtensa-esp32-espidf
 
 [env:debug]
 build_type = debug
+lib_deps = m5stack/M5GFX@^0.1.15
 
 [env:release]
 build_type = release
+lib_deps = m5stack/M5GFX@^0.1.15
